# haskell-prepare

./: LICENSE  compareTriplets.hs  diagonalDifference.hs  haskell-prepare.cabal  haskell-warmup.cabal  solveMeFirst.hs
solutions/: aVeryBigSum.hs  birthdayCakeCandles.hs  diagonalDifference.hs  simpleArraySum.hs  staircase.hs  timeConversion.hs
trails/warmup/: compareTriplets.hs  miniMaxSum.hs  plusMinus.hs  solveMeFirst.hs
