cabal-version:      3.0
name:               haskell-prepare
version:            0.1.0.0
description:        HackerRank prepare solutions in Haskell
homepage:           https://github.com/0kauaa/haskell-prepare
license:            MIT
license-file:       LICENSE
author:             Kauã Santana
maintainer:         kauassilva0023@gmail.com
build-type:         Simple

common warnings
    ghc-options:
        -Wall
        -Wno-unused-imports
        -Wno-missing-signatures
        -Wno-unused-top-binds
        -Wno-name-shadowing

common hackerRankDeps
    import: warnings
    default-language:
        Haskell2010
    build-depends:
        base ^>=4.18.3.0,
        array,
        split,
        text,
        containers
    default-extensions:
        DuplicateRecordFields
        FlexibleInstances
        UndecidableInstances

-- warmup trail
common warmup
    import: hackerRankDeps
    hs-source-dirs:
        trails/warmup

-- implementation trail
common implementation
    import: hackerRankDeps
    hs-source-dirs:
        trails/implementation

-- Warmup
executable solveMeFirst
    import: warmup
    main-is: solveMeFirst.hs

executable simpleArraySum
    import: warmup
    main-is: simpleArraySum.hs

executable compareTriplets
    import: warmup
    main-is: compareTriplets.hs

executable aVeryBigSum
    import: warmup
    main-is: aVeryBigSum.hs

executable diagonalDifference
    import: warmup
    main-is: diagonalDifference.hs

executable plusMinus
    import: warmup
    main-is: plusMinus.hs

executable staircase
    import: warmup
    main-is: staircase.hs

executable miniMaxSum
    import: warmup
    main-is: miniMaxSum.hs

executable birthdayCakeCandles
    import: warmup
    main-is: birthdayCakeCandles.hs

executable timeConversion
    import: warmup
    main-is: timeConversion.hs

-- new ones
-- executable filename
--     import: trail
--     main-is: filename.hs